2.1.0 not released

	* retry failed SAM connection (for i2p)
	* deprecated remap_files(), and prevent it from breaking v2 torrents
	* fix peer_info holding an i2p destination
	* implement i2p_pex, peer exchange support for i2p torrents
	* deprecate torrent_alert::torrent_name()
	* requires OpenSSL minimum version 1.1.0 with SNI support
	* try harder to bind TCP and UDP sockets to the same port
	* made disk_interface's status_t type a flags type
	* optimize resume data format to use less space
	* add a simpler overload to bencode() returning a vector<char>
	* introduced a new API for creating torrents, enabling file_storage optimizations
	* default build to not include functions deprecated in libtorrent 1.1 and earlier
	* add comment, created_by and creation_date to add_torrent_params
	* move session_flags to session_params
	* the entry class is now a standard variant type
	* use std::string_view instead of boost counterpart
	* libtorrent now requires C++17 to build
	* added support for WebTorrent

2.0.12

	* when building against OpenSSL, require at least version 1.1.1
	* add setting to set no-copy-on-write flag on new files
	* add performance counters to file pool
	* add high_priority flag to torrent_handle::force_reannounce()
	* update default DSCP value and update docs
	* fix python binding for set_notify_function()
	* fix error handling in mmap disk I/O when hashing files
	* improve copy_file_range() fallback
	* don't overwrite existing files when renaming
	* add option to send host header in HTTP proxy CONNECT command
	* cache DNS failures for a shorter time
	* file_renamed_alert is always posted, regardless of alert mask
	* add feature to request resume data synchronously
	* don't leak file descriptors to child processes (O_CLOEXEC)
	* optimize the utp resend
	* optimize tracker announcements
	* fix handling of invalid filenames
	* add support for I2CP inbound.lengthVariance and outbound.lengthVariance tunnel settings

2.0.11 released
